Add : Dashboard Insights, table

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -62,6 +62,100 @@
         </a>
       </div>
     </aside>
+    <!--------------------- End SIDE --------------------->
+    <main>
+      <h1>Dashboard</h1>
+      <div>
+        <input type="date">
+      </div>
+      <div class="insights">
+        <!--------------------- Start Chart --------------------->
+        <div class="sales">
+          <span class="material-icons-sharp">analytics</span>
+          <div class="middle">
+            <div class="left">
+              <h3>Total Sales</h3>
+              <h1>$25,024</h1>
+            </div>
+            <div class="progress">
+              <svg>
+                <circle cx="38" cy="38" r="36"></circle>
+              </svg>
+              <div class="number">
+                <p>81%</p>
+              </div>
+            </div>
+          </div>
+          <small class="text-muted">Last 24 Hours</small>
+        </div>
+        <!--------------------- End Chart --------------------->
+        <!--------------------- Start Chart --------------------->
+        <div class="expenses">
+          <span class="material-icons-sharp">bar_chart</span>
+          <div class="middle">
+            <div class="left">
+              <h3>Total Expenses</h3>
+              <h1>$14,160</h1>
+            </div>
+            <div class="progress">
+              <svg>
+                <circle cx="38" cy="38" r="36"></circle>
+              </svg>
+              <div class="number">
+                <p>62%</p>
+              </div>
+            </div>
+          </div>
+          <small class="text-muted">Last 24 Hours</small>
+        </div>
+        <!--------------------- End Chart --------------------->
+        <!--------------------- Start Chart --------------------->
+        <div class="income">
+          <span class="material-icons-sharp">stacked_line_chart</span>
+          <div class="middle">
+            <div class="left">
+              <h3>Total Income</h3>
+              <h1>$10,024</h1>
+            </div>
+            <div class="progress">
+              <svg>
+                <circle cx="38" cy="38" r="36"></circle>
+              </svg>
+              <div class="number">
+                <p>45%</p>
+              </div>
+            </div>
+          </div>
+          <small class="text-muted">Last 24 Hours</small>
+        </div>
+        <!--------------------- End Chart --------------------->
+      </div>
+      <!--------------------- End Insights --------------------->
+      <div class="recent-order">
+        <h2>Recent Orders</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Product Name</th>
+              <th>Product Number</th>
+              <th>Payment</th>
+              <th>Status</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Foldable Mini Drone</td>
+              <td>850</td>
+              <td>Due</td>
+              <td class="warning">Pending</td>
+              <td class="primary">Details</td>
+            </tr>
+          </tbody>
+        </table>
+        <a href="#">Show All</a>
+      </div>
+    </main>
   </div>
 </body>
 </html>
