--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -63,11 +63,13 @@
       </div>
     </aside>
     <!--------------------- End SIDE --------------------->
+    <!--------------------- Start Main --------------------->
     <main>
       <h1>Dashboard</h1>
       <div>
         <input type="date">
       </div>
+      <!--------------------- Start Insights --------------------->
       <div class="insights">
         <!--------------------- Start Chart --------------------->
         <div class="sales">
@@ -131,7 +133,7 @@
         <!--------------------- End Chart --------------------->
       </div>
       <!--------------------- End Insights --------------------->
-      <div class="recent-order">
+      <div class="recent-orders">
         <h2>Recent Orders</h2>
         <table>
           <thead>
@@ -151,11 +153,154 @@
               <td class="warning">Pending</td>
               <td class="primary">Details</td>
             </tr>
+            <tr>
+              <td>Foldable Mini Drone</td>
+              <td>850</td>
+              <td>Due</td>
+              <td class="warning">Pending</td>
+              <td class="primary">Details</td>
+            </tr>
+            <tr>
+              <td>Foldable Mini Drone</td>
+              <td>850</td>
+              <td>Due</td>
+              <td class="warning">Pending</td>
+              <td class="primary">Details</td>
+            </tr>
+            <tr>
+              <td>Foldable Mini Drone</td>
+              <td>850</td>
+              <td>Due</td>
+              <td class="warning">Pending</td>
+              <td class="primary">Details</td>
+            </tr>
+            <tr>
+              <td>Foldable Mini Drone</td>
+              <td>850</td>
+              <td>Due</td>
+              <td class="warning">Pending</td>
+              <td class="primary">Details</td>
+            </tr>
           </tbody>
         </table>
         <a href="#">Show All</a>
       </div>
     </main>
+    <!--------------------- End Main --------------------->
+
+    <!--------------------- Start Right --------------------->
+    <div class="right">
+      <!--------------------- Start Top --------------------->
+      <div class="top">
+        <button id="menu-btn">
+          <span class="material-icons-sharp">menu</span>
+        </button>
+        <div class="theme-toggler">
+          <span class="material-icons-sharp active">light_mode</span>
+          <span class="material-icons-sharp">dark_mode</span>
+        </div>
+        <div class="profile">
+          <div class="info">
+            <p>Hi, <b>Minwoo</b></p>
+            <small class="text-muted">Admin</small>
+          </div>
+          <!-- profile photo -->
+          <div class="profile-photo">
+            <img src="img/logo.jpg">
+          </div>
+        </div>
+      </div>
+      <!--------------------- End Top --------------------->
+      <div class="recent-updates">
+        <h2> Recent Updates</h2>
+        <div class="updates">
+          <div class="update">
+            <div class="profile-photo">
+              <img src="img/logo.jpg">
+            </div>
+            <div class="message">
+              <p><b>message</b> received his order of Night lion tech GPS drone.</p>
+              <small class="text-muted">2 Minutes Ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="updates">
+          <div class="update">
+            <div class="profile-photo">
+              <img src="img/logo.jpg">
+            </div>
+            <div class="message">
+              <p><b>message</b> received his order of Night lion tech GPS drone.</p>
+              <small class="text-muted">2 Minutes Ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="updates">
+          <div class="update">
+            <div class="profile-photo">
+              <img src="img/logo.jpg">
+            </div>
+            <div class="message">
+              <p><b>message</b> received his order of Night lion tech GPS drone.</p>
+              <small class="text-muted">2 Minutes Ago</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--------------------- End Recent Updates --------------------->
+      <div class="sales-analytics">
+        <h2>Sales analytics</h2>
+
+        <div class="item online">
+          <div class="icon">
+            <span class="material-icons-sharp">shopping_cart</span>
+          </div>
+          <div class="right">
+            <div class="info">
+              <h3>Online Orders</h3>
+              <small class="text-muted">Last 24 Hours</small>
+            </div>
+            <h5 class="success">+39%</h5>
+            <h3>3849</h3>
+          </div>
+        </div>
+
+        <div class="item offline">
+          <div class="icon">
+            <span class="material-icons-sharp">shopping_cart</span>
+          </div>
+          <div class="right">
+            <div class="info">
+              <h3>Offline Orders</h3>
+              <small class="text-muted">Last 24 Hours</small>
+            </div>
+            <h5 class="danger">-17%</h5>
+            <h3>2222</h3>
+          </div>
+        </div>
+
+        <div class="item customers">
+          <div class="icon">
+            <span class="material-icons-sharp">shopping_cart</span>
+          </div>
+          <div class="right">
+            <div class="info">
+              <h3>New Customers</h3>
+              <small class="text-muted">Last 24 Hours</small>
+            </div>
+            <h5 class="danger">+25%</h5>
+            <h3>888</h3>
+          </div>
+        </div>
+        <div class="item add-product">
+          <div>
+            <span class="material-icons-sharp">add</span>
+            <h3>Add Product</h3>
+          </div>
+        </div>
+        
+      </div>
+    </div>
   </div>
 </body>
 </html>
