--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -25,6 +25,16 @@
   --box-shadow: 0 2rem 3rem var(--color-light)
 }
 
+/* ================= Dark Varaibles ================= */
+.dark-theme-variables {
+  --color-background: #181a1e;
+  --color-white: #202528;
+  --color-dark: #edeffd;
+  --color-dark-variant: #a3bdcc;
+  --color-light: rgba(0,0,0,0.4);
+  --box-shadow: 0 2rem 3rem var(--color-light);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -568,13 +578,21 @@ main .recent-orders a {
 
   aside {
     position: fixed;
-    left: 0;
-    background: 18rem;
+    left: -100%;
+    background: var(--color-white);
     z-index: 3;
     box-shadow: 1rem 3rem 4rem var(--color-light);
     height: 100vh;
+    width: 18rem;
     padding-right: var(--card-padding);
     display: none;
+    animation: showMenu 400ms ease forwards;
+  }
+
+  @keyframes showMenu {
+    to {
+      left: 0;
+    }
   }
 
   aside .logo {
