--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -66,7 +66,7 @@
     <!--------------------- Start Main --------------------->
     <main>
       <h1>Dashboard</h1>
-      <div>
+      <div class="date">
         <input type="date">
       </div>
       <!--------------------- Start Insights --------------------->
@@ -302,5 +302,6 @@
       </div>
     </div>
   </div>
+  <script src="js/index.js"></script>
 </body>
 </html>
